<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:orientation="horizontal"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/scheduleTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kursensNamn"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/scheduleDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moment"
            android:textColor="@color/colorItemText"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/scheduleLocationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plats"
            android:textColor="@color/colorItemText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/scheduleStartTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startTiden"
            android:textColor="@color/colorItemText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/scheduleEndTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slutTiden"
            android:textColor="@color/colorItemText"
            android:textSize="16sp" />


    </LinearLayout>
</LinearLayout>
