<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    android:baselineAligned="false"
    tools:context=".ui.ScheduleFragment">


    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="75dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/leftSideColor"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/previousWeekButton"
            style="@style/CustomBackButton"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/monday_btn"
            style="@style/MondayButtonStyle"
            android:text="@string/monday"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/tuesday_btn"
            style="@style/BaseButtonStyle"
            android:text="@string/tuesday"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/wednesday_btn"
            style="@style/BaseButtonStyle"
            android:text="@string/wednesday"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/thursday_btn"
            style="@style/BaseButtonStyle"
            android:text="@string/thursday"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/friday_btn"
            style="@style/BaseButtonStyle"
            android:text="@string/friday"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/saturday_btn"
            style="@style/BaseButtonStyle"
            android:text="@string/saturday"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/sunday_btn"
            style="@style/BaseButtonStyle"
            android:text="@string/sunday"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/nextWeekButton"
            style="@style/CustomForwardButton"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="16dp">


        <TextView
            android:id="@+id/dayMonthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:text="Tue, Aug" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/dayMonthTextView"
            android:layout_marginEnd="4dp"
            android:layout_toStartOf="@id/dayMonthTextView"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:text="18" />

        <TextView
            android:id="@+id/weekTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_toStartOf="@id/dayMonthTextView"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:text="18" />

        <TextView
            android:id="@+id/scheduleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dateTextView"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="21dp"
            android:text="@string/schedule_text"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/gradient_divider" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scheduleRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/divider"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="16dp"
            android:scrollbars="none" />


    </RelativeLayout>


</LinearLayout>